# llvm-bitcode-rs

./: Cargo.toml  README.md
.builds/: freebsd.yml  openbsd.yml
.github/workflows/: CI.yml
examples/: llvm_bca.rs  parse_records.rs
examples/parse_records/: collector.rs
src/: bitcode.rs  bits.rs  bitstream.rs  lib.rs  read.rs  visitor.rs
src/ir/: codes.rs  mod.rs
src/schema/: blocks.rs  dwarf.rs  enums.rs  records.rs  values.rs
tests/: test_bitcode_reader.rs
tests/fixtures/: llvm19.bc
