[package]
name = "llvm-bitcode"
version = "0.1.3"
authors = ["messense <messense@icloud.com>", "Kornel <kornel@geekhood.net>"]
description = "LLVM Bitcode parser in Rust"
edition = "2021"
keywords = ["llvm", "bitcode", "bc", "llvm-ir"]
categories = ["parser-implementations"]
readme = "README.md"
license = "MIT AND Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/messense/llvm-bitcode-rs.git"

[dependencies]
num_enum = "0.7.2"
